# bash-config

./: README.md  bash-config.cabal
src/Bash/: Config.hs
src/Bash/Config/: Builder.hs  Command.hs  Cond.hs  Env.hs  Eval.hs  Expand.hs  Lexer.hs  Parse.hs  Parser.hs  Source.hs  Types.hs  Word.hs
tests/: Tests.hs  assignment.sh  compound.sh  cond.sh  escaping.sh  expand.sh  function.sh  if.sh  list.sh  quoting.sh  redirection.sh  whitespace.sh
