name:               bash-config
version:            0.1.0
category:           Data, Language
license:            BSD3
license-file:       LICENSE
author:             Kyle Raftogianis
maintainer:         Kyle Raftogianis <kylerafto@gmail.com>
copyright:          Copyright (c) 2014 Kyle Raftogianis
build-type:         Simple
cabal-version:      >= 1.8
homepage:           http://github.com/knrafto/bash-config/
bug-reports:        http://github.com/knrafto/bash-config/issues
synopsis:           Safely interpret Bash scripts as configuration files
description:
  This package allows Bash configuration files to be parsed and interpreted
  from Haskell, without executing any commands. Many shell scripts use
  these as configuration files, which are intended to be sourced for
  shell variable assignments.
  .
  This library fully parses Bash scripts, but can only interpret a limited
  subset of Bash. No commands are actually executed. The resulting
  variables are not guaranteed to be correct, but in practice, most
  configuration scripts are simple enough and pure enough for the library
  to interpret completely.

extra-source-files:
  .gitignore
  README.md

source-repository head
  type: git
  location: git://github.com/knrafto/bash-config.git

library
  hs-source-dirs: src

  exposed-modules:
    Bash.Config

  other-modules:
    Bash.Config.Cond
    Bash.Config.Env
    Bash.Config.Expand
    Bash.Config.Eval

  build-depends:
    base          >= 4   && < 5,
    containers    >= 0.4 && < 0.6,
    mtl           >= 2   && < 3,
    language-bash >= 0.6 && < 1,
    transformers  >= 0.2 && < 0.4

  ghc-options: -Wall
